src/helpers/contentLexer.ts
// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.7 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
	offset: number;
	line: number;
	column: number;
}

export interface IFileRange {
	start: IFilePosition;
	end: IFilePosition;
}

export interface ILiteralExpectation {
	type: "literal";
	text: string;
	ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
	type: "class";
	parts: IClassParts;
	inverted: boolean;
	ignoreCase: boolean;
}

export interface IAnyExpectation {
	type: "any";
}

export interface IEndExpectation {
	type: "end";
}

export interface IOtherExpectation {
	type: "other";
	description: string;
}

export type Expectation =
	| ILiteralExpectation
	| IClassExpectation
	| IAnyExpectation
	| IEndExpectation
	| IOtherExpectation;

export class SyntaxError extends Error {
	public static buildMessage(expected: Expectation[], found: string | null) {
		function hex(ch: string): string {
			return ch.charCodeAt(0).toString(16).toUpperCase();
		}

		function literalEscape(s: string): string {
			return s
				.replace(/\\/g, "\\\\")
				.replace(/"/g, '\\"')
				.replace(/\0/g, "\\0")
				.replace(/\t/g, "\\t")
				.replace(/\n/g, "\\n")
				.replace(/\r/g, "\\r")
				.replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
				.replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
		}

		function classEscape(s: string): string {
			return s
				.replace(/\\/g, "\\\\")
				.replace(/\]/g, "\\]")
				.replace(/\^/g, "\\^")
				.replace(/-/g, "\\-")
				.replace(/\0/g, "\\0")
				.replace(/\t/g, "\\t")
				.replace(/\n/g, "\\n")
				.replace(/\r/g, "\\r")
				.replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
				.replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
		}

		function describeExpectation(expectation: Expectation) {
			switch (expectation.type) {
				case "literal":
					return '"' + literalEscape(expectation.text) + '"';
				case "class":
					const escapedParts = expectation.parts.map((part) => {
						return Array.isArray(part)
							? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
							: classEscape(part);
					});

					return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
				case "any":
					return "any character";
				case "end":
					return "end of input";
				case "other":
					return expectation.description;
			}
		}

		function describeExpected(expected1: Expectation[]) {
			const descriptions = expected1.map(describeExpectation);
			let i: number;
			let j: number;

			descriptions.sort();

			if (descriptions.length > 0) {
				for (i = 1, j = 1; i < descriptions.length; i++) {
					if (descriptions[i - 1] !== descriptions[i]) {
						descriptions[j] = descriptions[i];
						j++;
					}
				}
				descriptions.length = j;
			}

			switch (descriptions.length) {
				case 1:
					return descriptions[0];

				case 2:
					return descriptions[0] + " or " + descriptions[1];

				default:
					return descriptions.slice(0, -1).join(", ") + ", or " + descriptions[descriptions.length - 1];
			}
		}

		function describeFound(found1: string | null) {
			return found1 ? '"' + literalEscape(found1) + '"' : "end of input";
		}

		return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
	}

	public message: string;
	public expected: Expectation[];
	public found: string | null;
	public location: IFileRange;
	public name: string;

	constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
		super();
		this.message = message;
		this.expected = expected;
		this.found = found;
		this.location = location;
		this.name = "SyntaxError";

		if (typeof (Error as any).captureStackTrace === "function") {
			(Error as any).captureStackTrace(this, SyntaxError);
		}
	}
}

export interface ICached {
	nextPos: number;
	result: any;
}

function peg$parse(input: string, options?: IParseOptions) {
	options = options !== undefined ? options : {};

	const peg$FAILED: Readonly<{}> = {};

	const peg$startRuleFunctions: { [id: string]: any } = { start: peg$parsestart };
	let peg$startRuleFunction: () => any = peg$parsestart;

	const peg$c0 = /^[^\n]/;
	const peg$c1 = peg$classExpectation(["\n"], true, false);
	const peg$c2 = function (t: any, n: any): any {
		return { type: "text", content: `${t}${n ? "\n" : ""}` };
	};
	const peg$c3 = "```";
	const peg$c4 = peg$literalExpectation("```", false);
	const peg$c5 = function (l: any, c: any): any {
		const content = c ?? "";
		const isBlank = c.trim() === "";
		const lang = (l?.[0] ?? "").trim();
		const node = {
			type: "code",
			raw: `\`\`\`${`${lang}\n${content}`.trim()}\n\`\`\`\n`,
			lang,
			content: isBlank ? lang : content,
			inline: false,
		};
		return isBlank && node.lang === "" ? { type: "text", content: node.raw } : node;
	};
	const peg$c6 = "\n";
	const peg$c7 = peg$literalExpectation("\n", false);
	const peg$c8 = "`";
	const peg$c9 = peg$literalExpectation("`", false);
	const peg$c10 = "``";
	const peg$c11 = peg$literalExpectation("``", false);
	const peg$c12 = function (c: any): any {
		return inlineCode(c);
	};
	const peg$c13 = function (t: any): any {
		return t;
	};
	const peg$c14 = /^[\n]/;
	const peg$c15 = peg$classExpectation(["\n"], false, false);
	const peg$c16 = function (): any {
		return { type: "blank" };
	};
	const peg$c17 = /^[^`]/;
	const peg$c18 = peg$classExpectation(["`"], true, false);

	let peg$currPos = 0;
	let peg$savedPos = 0;
	const peg$posDetailsCache = [{ line: 1, column: 1 }];
	let peg$maxFailPos = 0;
	let peg$maxFailExpected: Expectation[] = [];
	let peg$silentFails = 0;

	const peg$resultsCache: { [id: number]: ICached } = {};

	let peg$result;

	if (options.startRule !== undefined) {
		if (!(options.startRule in peg$startRuleFunctions)) {
			throw new Error("Can't start parsing from rule \"" + options.startRule + '".');
		}

		peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
	}

	function text(): string {
		return input.substring(peg$savedPos, peg$currPos);
	}

	function location(): IFileRange {
		return peg$computeLocation(peg$savedPos, peg$currPos);
	}

	function expected(description: string, location1?: IFileRange) {
		location1 = location1 !== undefined ? location1 : peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildStructuredError(
			[peg$otherExpectation(description)],
			input.substring(peg$savedPos, peg$currPos),
			location1,
		);
	}

	function error(message: string, location1?: IFileRange) {
		location1 = location1 !== undefined ? location1 : peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildSimpleError(message, location1);
	}

	function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
		return { type: "literal", text: text1, ignoreCase: ignoreCase };
	}

	function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
		return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
	}

	function peg$anyExpectation(): IAnyExpectation {
		return { type: "any" };
	}

	function peg$endExpectation(): IEndExpectation {
		return { type: "end" };
	}

	function peg$otherExpectation(description: string): IOtherExpectation {
		return { type: "other", description: description };
	}

	function peg$computePosDetails(pos: number) {
		let details = peg$posDetailsCache[pos];
		let p;

		if (details) {
			return details;
		} else {
			p = pos - 1;
			while (!peg$posDetailsCache[p]) {
				p--;
			}

			details = peg$posDetailsCache[p];
			details = {
				line: details.line,
				column: details.column,
			};

			while (p < pos) {
				if (input.charCodeAt(p) === 10) {
					details.line++;
					details.column = 1;
				} else {
					details.column++;
				}

				p++;
			}

			peg$posDetailsCache[pos] = details;

			return details;
		}
	}

	function peg$computeLocation(startPos: number, endPos: number): IFileRange {
		const startPosDetails = peg$computePosDetails(startPos);
		const endPosDetails = peg$computePosDetails(endPos);

		return {
			start: {
				offset: startPos,
				line: startPosDetails.line,
				column: startPosDetails.column,
			},
			end: {
				offset: endPos,
				line: endPosDetails.line,
				column: endPosDetails.column,
			},
		};
	}

	function peg$fail(expected1: Expectation) {
		if (peg$currPos < peg$maxFailPos) {
			return;
		}

		if (peg$currPos > peg$maxFailPos) {
			peg$maxFailPos = peg$currPos;
			peg$maxFailExpected = [];
		}

		peg$maxFailExpected.push(expected1);
	}

	function peg$buildSimpleError(message: string, location1: IFileRange) {
		return new SyntaxError(message, [], "", location1);
	}

	function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
		return new SyntaxError(SyntaxError.buildMessage(expected1, found), expected1, found, location1);
	}

	function peg$parsestart(): any {
		let s0, s1, s2, s3, s4, s5, s6, s7, s8;

		const key = peg$currPos * 10 + 0;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = [];
		s1 = peg$parsecode();
		if (s1 === peg$FAILED) {
			s1 = peg$parseinline_code();
			if (s1 === peg$FAILED) {
				s1 = peg$parseblankline();
				if (s1 === peg$FAILED) {
					s1 = peg$currPos;
					s2 = peg$currPos;
					s3 = [];
					s4 = peg$currPos;
					s5 = peg$currPos;
					peg$silentFails++;
					s6 = peg$parsecode();
					peg$silentFails--;
					if (s6 === peg$FAILED) {
						s5 = undefined;
					} else {
						peg$currPos = s5;
						s5 = peg$FAILED;
					}
					if (s5 !== peg$FAILED) {
						s6 = peg$currPos;
						peg$silentFails++;
						s7 = peg$parseinline_code();
						peg$silentFails--;
						if (s7 === peg$FAILED) {
							s6 = undefined;
						} else {
							peg$currPos = s6;
							s6 = peg$FAILED;
						}
						if (s6 !== peg$FAILED) {
							s7 = peg$currPos;
							if (peg$c0.test(input.charAt(peg$currPos))) {
								s8 = input.charAt(peg$currPos);
								peg$currPos++;
							} else {
								s8 = peg$FAILED;
								if (peg$silentFails === 0) {
									peg$fail(peg$c1);
								}
							}
							if (s8 !== peg$FAILED) {
								s7 = input.substring(s7, peg$currPos);
							} else {
								s7 = s8;
							}
							if (s7 !== peg$FAILED) {
								s5 = [s5, s6, s7];
								s4 = s5;
							} else {
								peg$currPos = s4;
								s4 = peg$FAILED;
							}
						} else {
							peg$currPos = s4;
							s4 = peg$FAILED;
						}
					} else {
						peg$currPos = s4;
						s4 = peg$FAILED;
					}
					if (s4 !== peg$FAILED) {
						while (s4 !== peg$FAILED) {
							s3.push(s4);
							s4 = peg$currPos;
							s5 = peg$currPos;
							peg$silentFails++;
							s6 = peg$parsecode();
							peg$silentFails--;
							if (s6 === peg$FAILED) {
								s5 = undefined;
							} else {
								peg$currPos = s5;
								s5 = peg$FAILED;
							}
							if (s5 !== peg$FAILED) {
								s6 = peg$currPos;
								peg$silentFails++;
								s7 = peg$parseinline_code();
								peg$silentFails--;
								if (s7 === peg$FAILED) {
									s6 = undefined;
								} else {
									peg$currPos = s6;
									s6 = peg$FAILED;
								}
								if (s6 !== peg$FAILED) {
									s7 = peg$currPos;
									if (peg$c0.test(input.charAt(peg$currPos))) {
										s8 = input.charAt(peg$currPos);
										peg$currPos++;
									} else {
										s8 = peg$FAILED;
										if (peg$silentFails === 0) {
											peg$fail(peg$c1);
										}
									}
									if (s8 !== peg$FAILED) {
										s7 = input.substring(s7, peg$currPos);
									} else {
										s7 = s8;
									}
									if (s7 !== peg$FAILED) {
										s5 = [s5, s6, s7];
										s4 = s5;
									} else {
										peg$currPos = s4;
										s4 = peg$FAILED;
									}
								} else {
									peg$currPos = s4;
									s4 = peg$FAILED;
								}
							} else {
								peg$currPos = s4;
								s4 = peg$FAILED;
							}
						}
					} else {
						s3 = peg$FAILED;
					}
					if (s3 !== peg$FAILED) {
						s2 = input.substring(s2, peg$currPos);
					} else {
						s2 = s3;
					}
					if (s2 !== peg$FAILED) {
						s3 = peg$parseblankline();
						if (s3 === peg$FAILED) {
							s3 = null;
						}
						if (s3 !== peg$FAILED) {
							peg$savedPos = s1;
							s2 = peg$c2(s2, s3);
							s1 = s2;
						} else {
							peg$currPos = s1;
							s1 = peg$FAILED;
						}
					} else {
						peg$currPos = s1;
						s1 = peg$FAILED;
					}
				}
			}
		}
		if (s1 !== peg$FAILED) {
			while (s1 !== peg$FAILED) {
				s0.push(s1);
				s1 = peg$parsecode();
				if (s1 === peg$FAILED) {
					s1 = peg$parseinline_code();
					if (s1 === peg$FAILED) {
						s1 = peg$parseblankline();
						if (s1 === peg$FAILED) {
							s1 = peg$currPos;
							s2 = peg$currPos;
							s3 = [];
							s4 = peg$currPos;
							s5 = peg$currPos;
							peg$silentFails++;
							s6 = peg$parsecode();
							peg$silentFails--;
							if (s6 === peg$FAILED) {
								s5 = undefined;
							} else {
								peg$currPos = s5;
								s5 = peg$FAILED;
							}
							if (s5 !== peg$FAILED) {
								s6 = peg$currPos;
								peg$silentFails++;
								s7 = peg$parseinline_code();
								peg$silentFails--;
								if (s7 === peg$FAILED) {
									s6 = undefined;
								} else {
									peg$currPos = s6;
									s6 = peg$FAILED;
								}
								if (s6 !== peg$FAILED) {
									s7 = peg$currPos;
									if (peg$c0.test(input.charAt(peg$currPos))) {
										s8 = input.charAt(peg$currPos);
										peg$currPos++;
									} else {
										s8 = peg$FAILED;
										if (peg$silentFails === 0) {
											peg$fail(peg$c1);
										}
									}
									if (s8 !== peg$FAILED) {
										s7 = input.substring(s7, peg$currPos);
									} else {
										s7 = s8;
									}
									if (s7 !== peg$FAILED) {
										s5 = [s5, s6, s7];
										s4 = s5;
									} else {
										peg$currPos = s4;
										s4 = peg$FAILED;
									}
								} else {
									peg$currPos = s4;
									s4 = peg$FAILED;
								}
							} else {
								peg$currPos = s4;
								s4 = peg$FAILED;
							}
							if (s4 !== peg$FAILED) {
								while (s4 !== peg$FAILED) {
									s3.push(s4);
									s4 = peg$currPos;
									s5 = peg$currPos;
									peg$silentFails++;
									s6 = peg$parsecode();
									peg$silentFails--;
									if (s6 === peg$FAILED) {
										s5 = undefined;
									} else {
										peg$currPos = s5;
										s5 = peg$FAILED;
									}
									if (s5 !== peg$FAILED) {
										s6 = peg$currPos;
										peg$silentFails++;
										s7 = peg$parseinline_code();
										peg$silentFails--;
										if (s7 === peg$FAILED) {
											s6 = undefined;
										} else {
											peg$currPos = s6;
											s6 = peg$FAILED;
										}
										if (s6 !== peg$FAILED) {
											s7 = peg$currPos;
											if (peg$c0.test(input.charAt(peg$currPos))) {
												s8 = input.charAt(peg$currPos);
												peg$currPos++;
											} else {
												s8 = peg$FAILED;
												if (peg$silentFails === 0) {
													peg$fail(peg$c1);
												}
											}
											if (s8 !== peg$FAILED) {
												s7 = input.substring(s7, peg$currPos);
											} else {
												s7 = s8;
											}
											if (s7 !== peg$FAILED) {
												s5 = [s5, s6, s7];
												s4 = s5;
											} else {
												peg$currPos = s4;
												s4 = peg$FAILED;
											}
										} else {
											peg$currPos = s4;
											s4 = peg$FAILED;
										}
									} else {
										peg$currPos = s4;
										s4 = peg$FAILED;
									}
								}
							} else {
								s3 = peg$FAILED;
							}
							if (s3 !== peg$FAILED) {
								s2 = input.substring(s2, peg$currPos);
							} else {
								s2 = s3;
							}
							if (s2 !== peg$FAILED) {
								s3 = peg$parseblankline();
								if (s3 === peg$FAILED) {
									s3 = null;
								}
								if (s3 !== peg$FAILED) {
									peg$savedPos = s1;
									s2 = peg$c2(s2, s3);
									s1 = s2;
								} else {
									peg$currPos = s1;
									s1 = peg$FAILED;
								}
							} else {
								peg$currPos = s1;
								s1 = peg$FAILED;
							}
						}
					}
				}
			}
		} else {
			s0 = peg$FAILED;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parsecode(): any {
		let s0, s1, s2, s3, s4, s5;

		const key = peg$currPos * 10 + 1;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		if (input.substr(peg$currPos, 3) === peg$c3) {
			s1 = peg$c3;
			peg$currPos += 3;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c4);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$parselang();
			if (s2 === peg$FAILED) {
				s2 = null;
			}
			if (s2 !== peg$FAILED) {
				s3 = peg$parsecode_content();
				if (s3 === peg$FAILED) {
					s3 = null;
				}
				if (s3 !== peg$FAILED) {
					if (input.substr(peg$currPos, 3) === peg$c3) {
						s4 = peg$c3;
						peg$currPos += 3;
					} else {
						s4 = peg$FAILED;
						if (peg$silentFails === 0) {
							peg$fail(peg$c4);
						}
					}
					if (s4 !== peg$FAILED) {
						s5 = peg$parseblankline();
						if (s5 === peg$FAILED) {
							s5 = null;
						}
						if (s5 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c5(s2, s3);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parselang(): any {
		let s0, s1, s2;

		const key = peg$currPos * 10 + 2;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = peg$parsechars();
		if (s1 !== peg$FAILED) {
			if (input.charCodeAt(peg$currPos) === 10) {
				s2 = peg$c6;
				peg$currPos++;
			} else {
				s2 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c7);
				}
			}
			if (s2 !== peg$FAILED) {
				s1 = [s1, s2];
				s0 = s1;
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parsecode_content(): any {
		let s0, s1, s2, s3, s4;

		const key = peg$currPos * 10 + 3;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = peg$currPos;
		s2 = peg$parseno_back_chars();
		if (s2 !== peg$FAILED) {
			if (input.charCodeAt(peg$currPos) === 96) {
				s3 = peg$c8;
				peg$currPos++;
			} else {
				s3 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c9);
				}
			}
			if (s3 !== peg$FAILED) {
				s4 = peg$parsecode_content();
				if (s4 !== peg$FAILED) {
					s2 = [s2, s3, s4];
					s1 = s2;
				} else {
					peg$currPos = s1;
					s1 = peg$FAILED;
				}
			} else {
				peg$currPos = s1;
				s1 = peg$FAILED;
			}
		} else {
			peg$currPos = s1;
			s1 = peg$FAILED;
		}
		if (s1 !== peg$FAILED) {
			s0 = input.substring(s0, peg$currPos);
		} else {
			s0 = s1;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$currPos;
			s2 = peg$parseno_back_chars();
			if (s2 !== peg$FAILED) {
				if (input.substr(peg$currPos, 2) === peg$c10) {
					s3 = peg$c10;
					peg$currPos += 2;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c11);
					}
				}
				if (s3 !== peg$FAILED) {
					s4 = peg$parsecode_content();
					if (s4 !== peg$FAILED) {
						s2 = [s2, s3, s4];
						s1 = s2;
					} else {
						peg$currPos = s1;
						s1 = peg$FAILED;
					}
				} else {
					peg$currPos = s1;
					s1 = peg$FAILED;
				}
			} else {
				peg$currPos = s1;
				s1 = peg$FAILED;
			}
			if (s1 !== peg$FAILED) {
				s0 = input.substring(s0, peg$currPos);
			} else {
				s0 = s1;
			}
			if (s0 === peg$FAILED) {
				s0 = peg$currPos;
				s1 = peg$parseno_back_chars();
				if (s1 !== peg$FAILED) {
					s0 = input.substring(s0, peg$currPos);
				} else {
					s0 = s1;
				}
			}
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parseinline_code(): any {
		let s0, s1, s2, s3, s4;

		const key = peg$currPos * 10 + 4;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		if (input.charCodeAt(peg$currPos) === 96) {
			s1 = peg$c8;
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c9);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$currPos;
			s3 = peg$parseno_back_chars();
			if (s3 !== peg$FAILED) {
				s2 = input.substring(s2, peg$currPos);
			} else {
				s2 = s3;
			}
			if (s2 !== peg$FAILED) {
				if (input.charCodeAt(peg$currPos) === 96) {
					s3 = peg$c8;
					peg$currPos++;
				} else {
					s3 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c9);
					}
				}
				if (s3 !== peg$FAILED) {
					s4 = peg$parseblankline();
					if (s4 === peg$FAILED) {
						s4 = null;
					}
					if (s4 !== peg$FAILED) {
						peg$savedPos = s0;
						s1 = peg$c12(s2);
						s0 = s1;
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			if (input.substr(peg$currPos, 2) === peg$c10) {
				s1 = peg$c10;
				peg$currPos += 2;
			} else {
				s1 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c11);
				}
			}
			if (s1 !== peg$FAILED) {
				s2 = peg$parseinline_code_content();
				if (s2 !== peg$FAILED) {
					if (input.substr(peg$currPos, 2) === peg$c10) {
						s3 = peg$c10;
						peg$currPos += 2;
					} else {
						s3 = peg$FAILED;
						if (peg$silentFails === 0) {
							peg$fail(peg$c11);
						}
					}
					if (s3 !== peg$FAILED) {
						s4 = peg$parseblankline();
						if (s4 === peg$FAILED) {
							s4 = null;
						}
						if (s4 !== peg$FAILED) {
							peg$savedPos = s0;
							s1 = peg$c12(s2);
							s0 = s1;
						} else {
							peg$currPos = s0;
							s0 = peg$FAILED;
						}
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parseinline_code_content(): any {
		let s0, s1, s2, s3, s4;

		const key = peg$currPos * 10 + 5;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = peg$currPos;
		s2 = peg$parseno_back_chars();
		if (s2 !== peg$FAILED) {
			if (input.charCodeAt(peg$currPos) === 96) {
				s3 = peg$c8;
				peg$currPos++;
			} else {
				s3 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$c9);
				}
			}
			if (s3 !== peg$FAILED) {
				s4 = peg$parsecode_content();
				if (s4 !== peg$FAILED) {
					s2 = [s2, s3, s4];
					s1 = s2;
				} else {
					peg$currPos = s1;
					s1 = peg$FAILED;
				}
			} else {
				peg$currPos = s1;
				s1 = peg$FAILED;
			}
		} else {
			peg$currPos = s1;
			s1 = peg$FAILED;
		}
		if (s1 !== peg$FAILED) {
			s0 = input.substring(s0, peg$currPos);
		} else {
			s0 = s1;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parseno_back_chars();
			if (s1 !== peg$FAILED) {
				s0 = input.substring(s0, peg$currPos);
			} else {
				s0 = s1;
			}
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parsetext(): any {
		let s0, s1, s2;

		const key = peg$currPos * 10 + 6;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = peg$parsechars();
		if (s1 !== peg$FAILED) {
			s2 = peg$parseblankline();
			if (s2 === peg$FAILED) {
				s2 = null;
			}
			if (s2 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$c13(s1);
				s0 = s1;
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parseblankline(): any {
		let s0, s1;

		const key = peg$currPos * 10 + 7;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		if (peg$c14.test(input.charAt(peg$currPos))) {
			s1 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c15);
			}
		}
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$c16();
		}
		s0 = s1;

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parsechars(): any {
		let s0, s1, s2;

		const key = peg$currPos * 10 + 8;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = [];
		if (peg$c0.test(input.charAt(peg$currPos))) {
			s2 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s2 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c1);
			}
		}
		if (s2 !== peg$FAILED) {
			while (s2 !== peg$FAILED) {
				s1.push(s2);
				if (peg$c0.test(input.charAt(peg$currPos))) {
					s2 = input.charAt(peg$currPos);
					peg$currPos++;
				} else {
					s2 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c1);
					}
				}
			}
		} else {
			s1 = peg$FAILED;
		}
		if (s1 !== peg$FAILED) {
			s0 = input.substring(s0, peg$currPos);
		} else {
			s0 = s1;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function peg$parseno_back_chars(): any {
		let s0, s1, s2;

		const key = peg$currPos * 10 + 9;
		const cached: ICached = peg$resultsCache[key];

		if (cached) {
			peg$currPos = cached.nextPos;

			return cached.result;
		}

		s0 = peg$currPos;
		s1 = [];
		if (peg$c17.test(input.charAt(peg$currPos))) {
			s2 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s2 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$c18);
			}
		}
		if (s2 !== peg$FAILED) {
			while (s2 !== peg$FAILED) {
				s1.push(s2);
				if (peg$c17.test(input.charAt(peg$currPos))) {
					s2 = input.charAt(peg$currPos);
					peg$currPos++;
				} else {
					s2 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$c18);
					}
				}
			}
		} else {
			s1 = peg$FAILED;
		}
		if (s1 !== peg$FAILED) {
			s0 = input.substring(s0, peg$currPos);
		} else {
			s0 = s1;
		}

		peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

		return s0;
	}

	function inlineCode(c?: string) {
		const content = c ?? "";
		return {
			type: "code",
			raw: `\`${content}\``,
			lang: "",
			content,
			inline: true,
		};
	}

	peg$result = peg$startRuleFunction();

	if (peg$result !== peg$FAILED && peg$currPos === input.length) {
		return peg$result;
	} else {
		if (peg$result !== peg$FAILED && peg$currPos < input.length) {
			peg$fail(peg$endExpectation());
		}

		throw peg$buildStructuredError(
			peg$maxFailExpected,
			peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
			peg$maxFailPos < input.length
				? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
				: peg$computeLocation(peg$maxFailPos, peg$maxFailPos),
		);
	}
}

export interface IParseOptions {
	filename?: string;
	startRule?: string;
	tracer?: any;
	[key: string]: any;
}
export type ParseFunction = (input: string, options?: IParseOptions) => any;
export const parse: ParseFunction = peg$parse;
